--- a/pom.xml
+++ b/pom.xml
@@ -28,7 +28,13 @@
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 	</properties>
-
+	<repositories>
+		<repository>
+			<id>nexus</id>
+			<name>nexus proxy repo</name>
+			<url>http://35.182.4.176:8081/repository/apple-releases/</url>
+		</repository>
+	</repositories>
 	<dependencies>
 		
 		<dependency>
