--- a/pom.xml
+++ b/pom.xml
@@ -109,7 +109,7 @@
 	    <snapshotRepository>
 	      <id>nexus</id>
 	      <name>Landmark Technologies Snapshot Nexus Repository </name>
-	      <url>http://3.96.209.111:8081/repository/apple-snapshot/</url>
+	      <url>http://3.96.209.111:8081/repository/Tesla/</url>
 	    </snapshotRepository>
 	    
 	</distributionManagement>
